learn about promises and promises chain

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="/syncronous-asynchronous-callback-promisses-chain/app.js"></script>
 </body>
-<script src="/app.js"></script>
 </html>
