this topic is fully done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/syncronous-asynchronous-callback-promisses-chain/app.js"></script>
+    <!-- <script src="/syncronous-asynchronous-callback-promisses-chain/app.js"></script> -->
+    <!-- <script src="/syncronous-asynchronous-callback-promisses-chain/synchronous.js"></script> -->
+    <!-- <script src="/syncronous-asynchronous-callback-promisses-chain/asynchronous.js"></script> -->
+    <!-- <script src="/syncronous-asynchronous-callback-promisses-chain/Callbacks.js"></script> -->
+    <!-- <script src="/syncronous-asynchronous-callback-promisses-chain/Callback Hell.js"></script> -->
+    <!-- <script src="/syncronous-asynchronous-callback-promisses-chain/promises.js"></script> -->
+    <!-- <script src="/syncronous-asynchronous-callback-promisses-chain/useOfPromises.js"></script> -->
+    <!-- <script src="/syncronous-asynchronous-callback-promisses-chain/Promise chain.js"></script> -->
+    <!-- <script src="/syncronous-asynchronous-callback-promisses-chain/Callback hell with prommise chain.js"></script> -->
+    <script src="/syncronous-asynchronous-callback-promisses-chain/async-await.js"></script>
 </body>
 </html>
